# multirobot_ws

./: .gitignore  README.md  mpc_cart_multi4_u7.json
scripts/: acados_env.sh
src/mpc_controller/: package.xml  setup.py
src/mpc_controller/config/: controller_params.yaml
src/mpc_controller/mpc_controller/: __init__.py  casadi_controller.py  controller_node.py
src/mpc_controller_cpp/: CMakeLists.txt
src/mpc_controller_cpp/config/: controller_params.yaml
src/mpc_controller_cpp/src/: casadi_controller_node.cpp  realworld_mpc.cpp
src/multi_robot_ground_station/exe/: global_mapper.cpp
src/multi_robot_ground_station/include/ground_station/: global_mapper.hpp  optitrack_calib.hpp
src/multi_robot_ground_station/launch/: global_mapper_launch.py
src/multi_robot_ground_station/map/: hospital_map.yaml
src/multi_robot_ground_station/param/: common.yaml  optitrack_calib.yaml
src/reference_generator/src/: simulation_reference.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/config/: simulation_params.yaml
src/simulation/launch/: multi_bringup.launch.py  sim_with_mpc.launch.py
src/simulation/src/: simulation.cpp
src/src/mpc_controller_cpp/: CMakeLists.txt  package.xml
src/src/mpc_controller_cpp/config/: controller_params.yaml
src/src/mpc_controller_cpp/launch/: mpc_simulation.launch.py
src/src/mpc_controller_cpp/src/: casadi_controller_node.cpp
src/src/multi_robot_ground_station/: CMakeLists.txt  README.md  package.xml
src/src/multi_robot_ground_station/exe/: optitrack_calib.cpp
src/src/multi_robot_ground_station/launch/: optitrack_calib_launch.py
src/src/multi_robot_ground_station/script/: multi_robot_test.py  test_topic_publish.py
src/src/multi_robot_ground_station/src/: global_mapper.cpp  optitrack_calib.cpp
src/src/reference_generator/: CMakeLists.txt  package.xml
src/src/reference_generator/src/: simulation_reference.cpp
src/src/simulation/: CMakeLists.txt
src/src/simulation/config/: simulation_params.yaml
src/src/simulation/launch/: multi_bringup.launch.py  sim_with_mpc.launch.py
src/src/simulation/src/: simulation.cpp
